[#789] Rest API for training logs (#911)
* Currently operator supports retraining of a ModelTraining
* Added commitID field to status of ModelTraining CRD
* Added Rest API for training logs
* Training logs appears during `legionctl mt create` command
* Added command to view training logs
